--- a/html-basic.html
+++ b/html-basic.html
@@ -20,7 +20,7 @@
         assumenda?</p>
     <a href="https://jd.com" target="_blank">在新窗口打开京东</a>
     <a mailto="xieranmaya@qq.com">点击给我发邮件</a>
-    <a href="#button">点击跳转到本页的底部</a>
+    <a href="#bottom">点击跳转到本页的底部</a>
     <a href="https://drscdn.500px.org/photo/229389427/m%3D1170/v2?user_id=7012987&webp=true&sig=196fa0c161aa562478d08571764872f7d69a346c3c0b2e12aa00e2c6414eb28b"
         download="img.jpg">点击我可以下载一个文件</a>
     <br>
@@ -40,10 +40,11 @@
     <p>html的注释怎么写？</p>
     <p>下面是一段javascript代码，最适合用何种标签表示呢？</p>
     <br>
-    <pre>
+    <pre><code>
         function a(){
             return 8
         }
+    </code>
     </pre>
     <hr>
 
@@ -86,7 +87,7 @@
             </dd>
             <dt>年龄</dt>
             <dd>
-                <select name="age" >
+                <select name="age">
                     <option label="请选择" selected hidden></option>
                     <optgroup label="少年">
                         <option value="1-6">1-6岁</option>
@@ -137,6 +138,62 @@
         </dl>
     </form>
     <hr>
-    
+
+    <table border="1">
+        <col>
+        <col style="background-color: red;">
+        <caption>货品列表</caption>
+        <thead>
+            <th>编号</th>
+            <th>品名</th>
+            <th>进价</th>
+            <th>出价</th>
+        </thead>
+        <tr>
+            <th>001</th>
+            <td>苹果</td>
+            <td rowspan="2">5</td>
+            <td>8</td>
+        </tr>
+        <tr>
+            <th>001</th>
+            <td>橘子</td>
+            <td>8</td>
+        </tr>
+        <tr>
+            <th>001</th>
+            <td>香蕉</td>
+            <td>5</td>
+            <td>8</td>
+        </tr>
+        <tr>
+            <th>001</th>
+            <td>山竹</td>
+            <td>5</td>
+            <td>8</td>
+        </tr>
+    </table>
+
+    <hr>
+
+    <img width="300px" src="https://drscdn.500px.org/photo/174778125/m%3D1170_k%3D1/2841ccf2a3720e8e794a6a6930f6ff2c" alt="image_title" usemap="#mapimg">
+    <map name="mapimg">
+        <area shape="circle" coords="80,30,50" href="https://www.mi.com" alt="XiaoMi">
+        <area shape="rect" coords="55,108,250,200" href="https://baidu.com" alt="Baidu">
+    </map>
+
+    <hr>
+    <a href="https://www.mi.com" target="if">点击我会在下面的frame里打开小米商城，但为什么打不开呢？</a>
+    <br>
+    <iframe src="https://nodejs.org" name="if"></iframe>
+    <div>怎样&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在这两个字之间空这么大呢？
+        <br>
+    怎样在页面中显示下面的内容呢？
+    <br>
+&lt;span>&lt;/span>
+</div>
+
+    <div id="bottom"></div>
 </body>
+
 </html>
