css-selector-practise.html

--- a/css-selector-practise.html
+++ b/css-selector-practise.html
@@ -30,8 +30,7 @@
 
 
       div.b>ul>li:nth-child(-n+25){color: red;}
-      div.b>ul>li:nth-child(n+35){color: blue;}
-      div.b>ul>li:nth-child(n+51){color: black;}
+      div.b>ul>li:nth-child(n+35):nth-last-child(n+51){color: blue;}
       div.b>ul>li:nth-child(n+65){color: green;}
 
       div.prime>ul>li:nth-child(1){color: red;}
