css-block-laryout.html

--- a/css-selector-practise.html
+++ b/css-selector-practise.html
@@ -31,11 +31,21 @@
       div.b>ul>li:nth-child(n+35):nth-last-child(n+51){color: blue;}
       div.b>ul>li:nth-child(n+65){color: green;}
 
-      div.prime>ul>li:nth-child(1){color: yellow;}
+      /* div.prime>ul>li:nth-child(1){color: yellow;}
       div.prime>ul>li:nth-child(2n):nth-child(n+3){color: yellow;}
       div.prime>ul>li:nth-child(3n):nth-child(n+4){color: yellow;}
       div.prime>ul>li:nth-child(5n):nth-child(n+6){color: yellow;}
-      div.prime>ul>li:nth-child(7n):nth-child(n+8){color: yellow;}
+      div.prime>ul>li:nth-child(7n):nth-child(n+8){color: yellow;} */
+      /* =======讲解修正======== */
+      .prime>ul>li {color: red;font:bold;}
+
+      .prime>ul>li:first-child,
+      .prime>ul>li:nth-child(2n+4),
+      .prime>ul>li:nth-child(3n+9),
+      .prime>ul>li:nth-child(5n+25),
+      .prime>ul>li:nth-child(7n+49) {
+        color: yellow;
+      }
     </style>
   </head>
 
