--- a/oald-layout.html
+++ b/oald-layout.html
@@ -8,17 +8,18 @@
     <title>oald layout</title>
 
     <style>
-        html,
-        body {
+        html, body {
             margin: 0px;
             height: 100%;
             font-size: 0px;
         }
 
         side {
+            font-size: 16px;
             display: inline-block;
             height: 100%;
             width: 25%;
+            vertical-align: top;
         }
 
         side:nth-child(1) {
@@ -38,20 +39,30 @@
         }
 
         .top {
+            display: inline-block;
+            width: 100%;
             height: 150px;
             background-color: rgba(46, 63, 156, 0.61);
         }
+
+        .bottom {
+            display: inline-block;
+            width: 100%;
+            height: calc(100% - 150px);
+        }
+
     </style>
 
 </head>
 
 <body>
-    <side></side>
-    <side>
-        <div class="top"></div>
+    <side>content A</side>
+    <side class="big">
+        <div class="top">zxcv</div>
+        <div class="bottom">1234</div>
     </side>
-    <side></side>
-    <side></side>
+    <side>content C</side>
+    <side>content D</side>
 </body>
 
 </html>
