--- a/oald-layout.html
+++ b/oald-layout.html
@@ -57,7 +57,7 @@
 
 <body>
     <side>content A</side>
-    <side class="big">
+    <side>
         <div class="top">zxcv</div>
         <div class="bottom">1234</div>
     </side>
