--- a/ios-checkbox.html
+++ b/ios-checkbox.html
@@ -11,7 +11,7 @@
         input + label {
             display:inline-block;
             height: 100px;
-            width: 200px;
+            width: 185px;
             border: 2px solid grey;
             border-radius: 50px;
             box-shadow: inset 0px 0px 0px 0px #30f34d;
@@ -26,17 +26,16 @@
             width: 94px;
             height: 94px;
             border-radius: 50px;
-            xbox-shadow: 0 4px 6px 0 rgba(32, 33, 36, 0.7);
             box-shadow: 0px 5px 14px 2px rgba(32, 33, 36, 0.7);
             position: relative;
             left: 4px;
             top: 3px;
-            transition: 0.5s;
+            transition: width 0.5s cubic-bezier(.25,.1,.25,15),left 0.5s;
         }
         
         input:checked + label {
-            box-shadow: inset 57px 0px 0px 100px #30f34d;
-            transition: 0.5s;
+            box-shadow: inset 57px 0px 0px 110px #30f34d;
+            transition: 0.3s;
 
         }
         
@@ -45,13 +44,13 @@
             display: block;
             background-color: #fff;
             box-sizing: border-box;
-            width: 94px;
+            width: 95px;
             height: 94px;
             border-radius: 50px;
             position: relative;
-            left: 100px;
+            left: 85px;
             top: 3px;
-            transition: 0.5s;
+            transition: width 0.5s cubic-bezier(.25,.1,.25,15),left 0.5s;
         }
 
     </style>
