--- a/ios-checkbox.html
+++ b/ios-checkbox.html
@@ -6,9 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <style>
-        input {display: none;}
+        input {
+            position:relative;
+            top: 50px;
+            left: 6px;
+            }
 
-        input + label {
+        input::before {
+            content:'';
             display:inline-block;
             height: 100px;
             width: 185px;
@@ -16,9 +21,12 @@
             border-radius: 50px;
             box-shadow: inset 0px 0px 0px 0px #30f34d;
             transition: 0.5s;
+            position: relative;
+            top: -50px;
+            left: -6px;
         }
 
-        input + label::before {
+        input::after {
             content: '';
             display: block;
             background-color: #fff;
@@ -27,30 +35,23 @@
             height: 94px;
             border-radius: 50px;
             box-shadow: 0px 5px 14px 2px rgba(32, 33, 36, 0.7);
-            position: relative;
-            left: 4px;
-            top: 3px;
-            transition: width 0.5s cubic-bezier(.25,.1,.25,15),left 0.5s;
+            position: absolute;
+            left: 0px;
+            top: -45px;
+            transition:0.3s;
         }
         
-        input:checked + label {
+        input:checked::before{
+            content:'';
             box-shadow: inset 57px 0px 0px 110px #30f34d;
             transition: 0.3s;
 
         }
         
-        input:checked + label::before {
+        input:checked::after {
             content: '';
-            display: block;
-            background-color: #fff;
-            box-sizing: border-box;
-            width: 95px;
-            height: 94px;
-            border-radius: 50px;
-            position: relative;
-            left: 85px;
-            top: 3px;
-            transition: width 0.5s cubic-bezier(.25,.1,.25,15),left 0.5s;
+            left: 83px;
+            top: -46px;
         }
 
     </style>
@@ -58,7 +59,6 @@
     <title>ios checkbox</title>
 </head>
 <body>
-    <input type="checkbox" id="ios">
-    <label for="ios"></label>
+    <input type="checkbox">
 </body>
 </html>
