--- a/basic-coding.html
+++ b/basic-coding.html
@@ -47,21 +47,65 @@ console.log(
 )
 </script>
 
-<script type='X' id="ch0103/18">
+<script id="ch0103/01">
+console.log(+prompt() + +prompt())
+</script>
+
+<script id="ch0103/02">
+console.log((+prompt() + +prompt()) * +prompt());
+</script>
+
+<script id="ch0103/03">
+console.log((+prompt() + +prompt()) / +prompt());
+</script>
+
+<script id="ch0103/04">
+var n1 = +prompt();
+var n2 = +prompt();
+console.log(Math.floor(n1 / n2) + ' ' + n1 % n2)
+</script>
+
+<script id="ch0103/05">
+console.log((+prompt() / +prompt()).toFixed(9))
+</script>
+
+<script id="ch0103/06">
+var n1 = +prompt();
+var n2 = +prompt();
+console.log('%' + (n2 / n1 / 100).toFixed(3))
+</script>
+
+<script id="ch0103/07">
+var x = +prompt();
 var a = +prompt();
 var b = +prompt();
 var c = +prompt();
-console.log((b - a) * (c - 1) + a)
+var d = +prompt();
+console.log(a * Math.pow(x, 3) + b * Math.pow(x, 2) + c * x + d)
 </script>
 
-<script type='X' id="ch0103/16">
-var x1 = +prompt();
-var y1 = +prompt();
-var x2 = +prompt();
-var y2 = +prompt();
-var time1 = Math.abs(x1 - x2) * Math.abs(x1 - x2);
-var time2 = Math.abs(y1 - y2) * Math.abs(y1 - y2);
-console.log((Math.sqrt(time1 + time2)).toFixed(3));
+<script id="ch0103/08">
+console.log((5 * (+prompt() - 32) / 9).toFixed(5))
+</script>
+
+<script id="ch0103/09">
+    var r = +prompt();
+    console.log((r * 2).toFixed(2) + ' ' + (Math.PI * r * 2).toFixed(4) + ' ' + (Math.pow(r, 2) * Math.PI))
+</script>
+
+<script id="ch0103/10">
+    console.log((1 / (1 / +prompt() + 1 / +prompt())).toFixed(2));
+</script>
+
+<script id="ch0103/11">
+var a = +prompt();
+var b = +prompt();
+var k = Math.floor(a / b);
+console.log(a - k * b)
+</script>
+
+<script id="ch0103/12">
+console.log((4 / 3 * 3.14 * Math.pow(+prompt(), 3)).toFixed(2));
 </script>
 
 <script type='X' id="ch0103/13">
@@ -69,6 +113,55 @@ var num = prompt();
 console.log(num[2] + num[1] + num[0])
 </script>
 
+<script id="ch0103/14">
+var h = +prompt();
+var r = +prompt();
+console.log(Math.ceil(20 * 1000 / (h * Math.PI * Math.pow(r, 2))));
+</script>
+
+<script id="ch0103/15">
+var n = +prompt();
+var x = +prompt();
+var y = +prompt();
+console.log(n - Math.ceil(y / x));
+</script>
+    
+<script type='X' id="ch0103/16">
+    var x1 = +prompt();
+    var y1 = +prompt();
+    var x2 = +prompt();
+    var y2 = +prompt();
+    var time1 = Math.abs(x1 - x2) * Math.abs(x1 - x2);
+    var time2 = Math.abs(y1 - y2) * Math.abs(y1 - y2);
+    console.log((Math.sqrt(time1 + time2)).toFixed(3));
+</script>
+ 
+<script type='X' id="ch0103/17">
+    var x1 = +prompt();
+var y1 = +prompt();
+var x2 = +prompt();
+var y2 = +prompt();
+var x3 = +prompt();
+var y3 = +prompt();
+var a = Math.sqrt(Math.pow(Math.abs(x1 - x2), 2) + Math.pow(Math.abs(y1 - y2), 2));
+var b = Math.sqrt(Math.pow(Math.abs(x1 - x3), 2) + Math.pow(Math.abs(y1 - y3), 2));
+var c = Math.sqrt(Math.pow(Math.abs(x2 - x3), 2) + Math.pow(Math.abs(y2 - y3), 2));
+var s = (a + b + c) / 2;
+var result = Math.sqrt(s * (s - a) * (s - b) * (s - c));
+console.log(a)
+console.log(b)
+console.log(c)
+console.log(s)
+console.log(result.toFixed(2))
+</script>
+   
+<script type='X' id="ch0103/18">
+    var a = +prompt();
+    var b = +prompt();
+    var c = +prompt();
+    console.log((b - a) * (c - 1) + a)
+</script>
+    
 <script type='X' id="ch0103/19">
 console.log(+prompt() * +prompt())
 </script>
@@ -104,3 +197,23 @@ console.log(
 )
 </script>
 
+<script type='X' id="ch0105/15">
+var R = +prompt() / 100;
+var M = +prompt();
+var Y = +prompt();
+
+for ( let i = 1; i <= Y; i++) {
+    M = M + M * R;
+}
+
+console.log(Math.floor(M))
+</script>
+
+<script type='X' id="ch0105/02">
+var sum = 0;
+
+for (let i = 0; i < 12; i++) {
+    sum += +prompt();
+}
+console.log($ + (sum / 12).toFixed(2));
+</script>
