--- a/basic-coding.html
+++ b/basic-coding.html
@@ -47,35 +47,35 @@ console.log(
 )
 </script>
 
-<script id="ch0103/01">
+<script type='X' id="ch0103/01">
 console.log(+prompt() + +prompt())
 </script>
 
-<script id="ch0103/02">
+<script type='X' id="ch0103/02">
 console.log((+prompt() + +prompt()) * +prompt());
 </script>
 
-<script id="ch0103/03">
-console.log((+prompt() + +prompt()) / +prompt());
+<script type='X' id="ch0103/03">
+console.log((Math.floor(+prompt() + +prompt()) / +prompt()));
 </script>
 
-<script id="ch0103/04">
+<script type='X' id="ch0103/04">
 var n1 = +prompt();
 var n2 = +prompt();
 console.log(Math.floor(n1 / n2) + ' ' + n1 % n2)
 </script>
 
-<script id="ch0103/05">
+<script type='X' id="ch0103/05">
 console.log((+prompt() / +prompt()).toFixed(9))
 </script>
 
-<script id="ch0103/06">
+<script type='X' id="ch0103/06">
 var n1 = +prompt();
 var n2 = +prompt();
-console.log('%' + (n2 / n1 / 100).toFixed(3))
+console.log('%' + (n2 / n1 * 100).toFixed(3))
 </script>
 
-<script id="ch0103/07">
+<script type='X' id="ch0103/07">
 var x = +prompt();
 var a = +prompt();
 var b = +prompt();
@@ -84,27 +84,29 @@ var d = +prompt();
 console.log(a * Math.pow(x, 3) + b * Math.pow(x, 2) + c * x + d)
 </script>
 
-<script id="ch0103/08">
+<script type='X' id="ch0103/08">
 console.log((5 * (+prompt() - 32) / 9).toFixed(5))
 </script>
 
-<script id="ch0103/09">
+<script type='X' id="ch0103/09">
     var r = +prompt();
-    console.log((r * 2).toFixed(2) + ' ' + (Math.PI * r * 2).toFixed(4) + ' ' + (Math.pow(r, 2) * Math.PI))
+    // console.log((r * 2).toFixed(4) + ' ' + (Math.PI * r * 2).toFixed(4) + ' ' + (Math.pow(r, 2) * Math.PI).toFixed(4))
+    // 题目有误,改变直径保留小数方法
+    console.log((r * 2).toFixed(4) + ' ' + (Math.floor((Math.PI * r * 2) * 10000) / 10000).toFixed(4) + ' ' + (Math.pow(r, 2) * Math.PI).toFixed(4))
 </script>
 
-<script id="ch0103/10">
+<script type='X' id="ch0103/10">
     console.log((1 / (1 / +prompt() + 1 / +prompt())).toFixed(2));
 </script>
 
-<script id="ch0103/11">
+<script type='X' id="ch0103/11">
 var a = +prompt();
 var b = +prompt();
 var k = Math.floor(a / b);
-console.log(a - k * b)
+console.log((a - k * b).toFixed(4));
 </script>
 
-<script id="ch0103/12">
+<script type='X' id="ch0103/12">
 console.log((4 / 3 * 3.14 * Math.pow(+prompt(), 3)).toFixed(2));
 </script>
 
@@ -113,13 +115,13 @@ var num = prompt();
 console.log(num[2] + num[1] + num[0])
 </script>
 
-<script id="ch0103/14">
+<script type='X' id="ch0103/14">
 var h = +prompt();
 var r = +prompt();
 console.log(Math.ceil(20 * 1000 / (h * Math.PI * Math.pow(r, 2))));
 </script>
 
-<script id="ch0103/15">
+<script type='X' id="ch0103/15">
 var n = +prompt();
 var x = +prompt();
 var y = +prompt();
@@ -148,10 +150,6 @@ var b = Math.sqrt(Math.pow(Math.abs(x1 - x3), 2) + Math.pow(Math.abs(y1 - y3), 2
 var c = Math.sqrt(Math.pow(Math.abs(x2 - x3), 2) + Math.pow(Math.abs(y2 - y3), 2));
 var s = (a + b + c) / 2;
 var result = Math.sqrt(s * (s - a) * (s - b) * (s - c));
-console.log(a)
-console.log(b)
-console.log(c)
-console.log(s)
 console.log(result.toFixed(2))
 </script>
    
@@ -209,11 +207,11 @@ for ( let i = 1; i <= Y; i++) {
 console.log(Math.floor(M))
 </script>
 
-<script type='X' id="ch0105/02">
+<script type='' id="ch0105/02">
 var sum = 0;
 
 for (let i = 0; i < 12; i++) {
     sum += +prompt();
 }
-console.log($ + (sum / 12).toFixed(2));
+console.log('$' + (sum / 12).toFixed(2));
 </script>
