--- a/basic-coding.html
+++ b/basic-coding.html
@@ -56,7 +56,7 @@ console.log((+prompt() + +prompt()) * +prompt());
 </script>
 
 <script type='X' id="ch0103/03">
-console.log((Math.floor(+prompt() + +prompt()) / +prompt()));
+console.log(Math.floor((+prompt() + +prompt()) / +prompt()));
 </script>
 
 <script type='X' id="ch0103/04">
@@ -69,10 +69,10 @@ console.log(Math.floor(n1 / n2) + ' ' + n1 % n2)
 console.log((+prompt() / +prompt()).toFixed(9))
 </script>
 
-<script type='X' id="ch0103/06">
+<script type='' id="ch0103/06">
 var n1 = +prompt();
 var n2 = +prompt();
-console.log('%' + (n2 / n1 * 100).toFixed(3))
+console.log((n2 / n1 * 100).toFixed(3) + '%')
 </script>
 
 <script type='X' id="ch0103/07">
@@ -207,7 +207,7 @@ for ( let i = 1; i <= Y; i++) {
 console.log(Math.floor(M))
 </script>
 
-<script type='' id="ch0105/02">
+<script type='X' id="ch0105/02">
 var sum = 0;
 
 for (let i = 0; i < 12; i++) {
