--- a/basic-coding.html
+++ b/basic-coding.html
@@ -185,24 +185,24 @@ console.log(Math.abs(+prompt()))
 console.log(+prompt().charCodeAt() % 2 ? 'YES' : 'NO')
 </script>
 
-<script id="ch0104/05">
+<script type='X' id="ch0104/05">
 var n1 = +prompt();
 var n2 = +prompt();
 console.log(n1 == n2 ? '=' : (n1 > n2 ? '>' : '<'))
 </script>
 
-<script id="ch0104/06">
+<script type='X' id="ch0104/06">
 var num = +prompt();
 console.log(num >= 10 && num <= 99 ? '1' : '0')
 </script>
 
-<script id="ch0104/07">
+<script type='X' id="ch0104/07">
 console.log(+prompt() >= 10 || +prompt() >=20 ? '1' : '0');
 </script>
 
-<script id="ch0104/08">
+<script type='' id="ch0104/08">
     var num = +prompt();
-    cosole.log(num % 3 || num % 5 ? 'NO' : 'YES');
+    console.log(num % 3 || num % 5 ? 'NO' : 'YES');
 </script>
 
 <script type='X' id="ch0104/13">
